--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,18 @@
 {
-  "name": "ravencore-lib",
-  "main": "./ravencore-lib.min.js",
+  "name": "cryptorescuecore-lib",
+  "main": "./cryptorescuecore-lib.min.js",
   "version": "0.13.19",
   "homepage": "http://bitcore.io",
   "authors": [
     "BitPay, Inc."
   ],
-  "description": "A pure, powerful core for your ravencoin project.",
+  "description": "A pure, powerful core for your cryptorescue project.",
   "moduleType": [
     "globals"
   ],
   "keywords": [
-    "ravencoin",
-    "ravencore",
+    "cryptorescue",
+    "cryptorescuecore",
     "rvn",
     "satoshi"
   ],
