--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ravencore-lib",
+  "name": "cryptorescuecore-lib",
   "version": "0.14.0",
-  "description": "A pure and powerful JavaScript Ravencoin library.",
+  "description": "A pure and powerful JavaScript CryptoRescue library.",
   "author": "BitPay <dev@bitpay.com>",
   "main": "index.js",
   "scripts": {
@@ -61,7 +61,7 @@
     }
   ],
   "keywords": [
-    "ravencoin",
+    "cryptorescue",
     "transaction",
     "address",
     "p2p",
@@ -78,7 +78,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/underdarkskies/ravencore-lib.git"
+    "url": "https://github.com/cryptorescue-project/cryptorescuecore-lib.git"
   },
   "browser": {
     "request": "browser-request"
@@ -92,7 +92,7 @@
     "lodash": "=3.10.1"
   },
   "devDependencies": {
-    "ravencore-build": "underdarkskies/ravencore-build",
+    "cryptorescuecore-build": "cryptorescue-project/cryptorescuecore-build",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
